# flask-admin

./: .flaskenv  Dockerfile.dev  manage.py  pyproject.toml  wsgi.py  wsgi_quick_test.py
.devcontainer/: devcontainer.json  docker-compose.yml
app/: __init__.py  admin.py  config.py  database.py  models.py
app/api/: __init__.py  auth.py  blacklist.py  crud.py  dto.py  meta_data.py  ping.py  power_units.py  power_units_meta.py  user_controller.py  users.py
app/static/css/: styles_sean.css
app/static/js/: custom.js  test_sean.js
app/templates/: create_custom.html  edit_custom.html  list_custom.html  microblog_list.html  test.html
app/templates/admin/: index.html  master.html
app/templates/admin/model/: list.html
app/tests/: conftest.py  test_admin.py  test_auth.py  test_config.py  test_ping.py  test_power_units.py  test_power_units_meta.py  test_user_model.py  test_users.py  test_users_unit.py
examples/forms-files-images/: app.py
examples/sqla/: run_server.py
examples/sqla-custom-inline-forms/: app.py
examples/sqla/admin/: main.py  models.py
flask_admin/form/: rules.py  upload.py
flask_admin/model/: fields.py
flask_admin/templates/bootstrap3/admin/model/: list.html
scripts/: lint_apply.sh
