[tool.poetry]
name = "Flask-Admin-Coloured"
version = "0.1.0"
description = "Adding font and cell-fill colours to Flask-Admin"
authors = ["Sean McCarthy <sean.mccarthy@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
flask-admin = "^1.5.7"
flask-sqlalchemy = "^2.4.4"
flask = "^1.1.2"
pyjwt = "^1.7.1"
python-dotenv = "^0.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
