[tool.poetry]
name = "flask_admin_plus"
version = "2.0.0a4"
description = "Flask Admin with a few more features and improvements"
authors = ["Sean McCarthy <smccarthy@myijack.com>"]
packages = [
    { include = "flask_admin" },
]

readme = "README.md"
author = [{ name = "Flask-Admin team" }]
classifiers = [
    'Development Status :: 4 - Beta',
    'Environment :: Web Environment',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: BSD License',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
]
requires-python = ">=3.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


[tool.poetry.dev-dependencies]
Flask = "^2.1.2"
python-dotenv = "^0.20.0"
flask-redis = "^0.4.0"
Flask-SQLAlchemy = "^2.5.1"
WTForms = "^3.0.1"
MarkupSafe = "^2.1.1"
flake8 = "^4.0.1"
pytest = "^7.1.2"
Flask-BabelEx = "^0.9.4"
GeoAlchemy2 = "^0.11.1"
Shapely = "^1.8.2"
SQLAlchemy-Utils = "^0.38.2"
pymongo = "^4.1.1"
peewee = "^3.14.10"
flask-mongoengine = "^1.0.0"
arrow = "^1.2.2"
wtf-peewee = "^3.0.4"
Pillow = "^9.1.1"
Babel = "^2.10.1"
psycopg2-binary = "^2.9.3"
pytest-cov = "^3.0.0"
coveralls = "^3.3.1"
sqlalchemy-citext = "^1.8.0"
azure-storage-blob = "^12.12.0"
colour = "^0.1.5"
email-validator = "^1.2.1"
[tool.pytest.ini_options]
testpaths = ["flask_admin/tests"]
markers = [
    "flask_babel: requires Flask-Babel to be installed"
]
filterwarnings = [
    "error",
    # TODO: remove the ignored deprecation warning when support for WTForms 3 has been added.
    "ignore:Flags should be stored in dicts and not in tuples. The next version of WTForms will abandon support for flags in tuples.:DeprecationWarning",

    # Werkzeug is responsible for the below deprecation warning; remove when they have updated their code.
    "default:ast\\.Str is deprecated and will be removed in Python 3\\.14:DeprecationWarning",
    "default:Attribute s is deprecated and will be removed in Python 3\\.14:DeprecationWarning",

    # Flask is responsible for the below deprecation warning; remove when they have updated their code.
    "default:'pkgutil\\.get_loader' is deprecated and slated for removal in Python 3\\.14:DeprecationWarning",
    "default:'pkgutil\\.find_loader' is deprecated and slated for removal in Python 3\\.14:DeprecationWarning",

    "default:datetime\\.datetime\\.utcnow\\(\\) is deprecated and scheduled for removal in a future version:DeprecationWarning",

    # `flask.testing` accesses this attribute; remove when they have updated their code.
    "default:The '__version__' attribute is deprecated and will be removed in Werkzeug 3\\.1\\.:DeprecationWarning",
]

[tool.coverage.run]
branch = true
source = ["flask_admin", "tests"]

[tool.coverage.paths]
source = ["flask_admin", "*/site-packages"]

[tool.mypy]
python_version = "3.9"
files = ["flask_admin"]
show_error_codes = true
pretty = true
strict = true

# Strongly recommend enabling this one as soon as you can
check_untyped_defs = false

# These shouldn't be too much additional work, but may be tricky to
# get passing if you use a lot of untyped libraries
disallow_subclassing_any = false
disallow_untyped_decorators = false
disallow_any_generics = false

# These next few are various gradations of forcing use of type annotations
disallow_untyped_calls = false
disallow_incomplete_defs = false
disallow_untyped_defs = false

# This one isn't too hard to get passing, but return on investment is lower
no_implicit_reexport = false

# This one can be tricky to get passing if you use a lot of untyped libraries
warn_return_any = false

[[tool.mypy.overrides]]
module = [
    "arrow",
    "azure.*",
    "bson.*",
    "citext",
    "colour",
    "flask_babel",
    "flask_wtf",
    "gridfs",
    "marker",
    "playhouse.*",
    "pymongo",
    "sqlalchemy.*",
    "sqlalchemy_utils",
    "tablib",
    "wtforms.*",
    "wtfpeewee.*",
]
ignore_missing_imports = true

[tool.pyright]
pythonVersion = "3.9"
include = ["flask_admin", "tests"]
typeCheckingMode = "basic"

[tool.ruff]
src = ["flask_admin"]
fix = true
show-fixes = true
output-format = "full"

[tool.ruff.lint]
select = [
    "B",  # flake8-bugbear
    "E",  # pycodestyle error
    "F",  # pyflakes
    "I",  # isort
    "UP",  # pyupgrade
    "W",  # pycodestyle warning
]
ignore-init-module-imports = true

[tool.ruff.lint.isort]
force-single-line = true
order-by-type = false
